/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Grpc.Interaction.Protobuf";

// Represents the version of an event source
message EventSourceVersion {
    uint64 commit = 1;
    uint32 sequence = 2;
}